--- a/css/reserves.css
+++ b/css/reserves.css
@@ -128,7 +128,7 @@
 
 .content{
     padding: 0 20px 0 35px;
-    width: 530px;
+    width: 25vw;
     margin-left: 50px;
     opacity: 0;
     transition: .6s;
@@ -150,32 +150,16 @@
     transition-delay: .3s;
 }
 
-.content span{
-    display: block;
-    color: #7b7992;
-    margin-bottom: 15px;
-    font-size: 22px;
-    font-weight: 500
-}
-
 .content .title{
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: 700;
     color: #0d0925;
     margin-bottom: 20px;
 }
 
-.content .text{
-    color: #4e4a67;
-    font-size: 19px;
-    margin-bottom: 30px;
-    line-height: 1.5em;
-    text-align: justify;
-}
-
 .content button{
     display: inline-flex;
-    padding: 15px 20px;
+    padding: 1vw 2vw;
     border: none;
     font-size: 16px;
     text-transform: uppercase;
@@ -192,6 +176,7 @@
 .content button:hover{
     background: linear-gradient(147deg, #fe791b 0%, #fd1c1c 74%);
 }
+
 .content button a {
     text-decoration: none;
     color: white;
