--- a/css/homepage.css
+++ b/css/homepage.css
@@ -55,7 +55,7 @@ p {
 }
 
 .card1 {
-    background-image: url(../img/img1.jpg);
+    background-image: url(../img/v79-157\ coleraine\ station\ 2019-10\ pa088560-4256.jpg);
 }
 
 .card2 {
@@ -63,7 +63,7 @@ p {
 }
 
 .card3 {
-    background-image: url(../img/img3.jpg);
+    background-image: url(../img/coleraine2.jpg);
 }
 
 .card4 {
