--- a/css/homepage.css
+++ b/css/homepage.css
@@ -59,7 +59,7 @@ p {
 }
 
 .card2 {
-    background-image: url(../img/img2.jpg);
+    background-image: url(../img/Dunkeld-Caravan-Park-3.jpeg);
 }
 
 .card3 {
@@ -67,7 +67,7 @@ p {
 }
 
 .card4 {
-    background-image: url(../img/img4.jpg);
+    background-image: url(../img/dunkeld-aboretum_gra_r_146099_1150x863.jpg);
 }
 
 .card:hover {
